[package]
name = "FahtocelCONV.RS"
version = "2.1.0"
edition = "2021"
documentation = https://docs.rs/FahtocelCONV.RS
description = "This is a crate in rust that converts fahrenheit to celcius and vice versa!"
repository = "https://github.com/Swoiksdmop/FahtocelCONV.RS"
licence = "MIT"
readme = "README.md"
authors = ["Ethan <kigangadarell@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
